# StratoSort

./: .bundle-size-snapshot  .env  .env.example  .eslintcache  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .prettierrc.js  .tmp_check_ollama.js  BUILD_SUCCESS.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  OLLAMA_SETUP_SUMMARY.md  PERFORMANCE_GUIDE.md  PRODUCTION_READINESS.md  QUICK_START.md  README.md  ROLLBACK_STATUS.md  SECURITY.md  UI_UX_IMPROVEMENTS.md  UI_UX_REVIEW_SUMMARY.md  WORKING-BRANCH-SETUP.md  auto-fix-bugs.js  connection-test.js  electron-builder.json  index.html  jest.config.js  package-lock.json  package.json  postcss.config.js  renderer.setup.js  repomix-output.xml  run-tests.js  setup-ollama.js  start-analysis-simple.bat  start-with-analysis.ps1  startup-check.js  (+10 more)
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  dependabot-automerge.yml  dependency-review.yml  github-pages.yml  release-windows.yml  release.yml  repo-visualizer.yml  security.yml
.husky/: pre-commit
StratoRustDemoData/: f5h8j2.py
__mocks__/: electron.js
analysis/: ANALYSIS-README.md  analysis-commands.ps1
assets/: assets.d.ts
diagnostics/: diag-20250825-183033.txt
docs/: CONTRIBUTING.md  ENHANCED-LLM-IMPLEMENTATION-COMPLETE.md  ENHANCED-LLM-INTEGRATION.md  ENHANCED-LLM-SPEED-OPTIMIZATION.md  ipc-mapping.md
e2e-tests/: QUICKSTART.md  README.md  jest.config.js  wdio.conf.js
e2e-tests/reports/: e2e-results.json
e2e-tests/specs/: file-organization.spec.js
ollamadocs/: README.md  api.md  faq.md  gpu.md  macos.md  template.md  windows.md
scripts/: README.md  build-windows.ps1  bundle-size.js  check-system.js  comprehensive-monitoring.ps1  coverage.ps1  coverage.sh  diagnose-chokidar.js  diagnose-performance.ps1  diagnose.js  fix-bugs.js  generate-nsis-assets.js  migrate-ipc-regex.js  migrate-ipc-to-api.js  migrate-requires.js  optimize-startup.js  parse-cpu-profile.js  patch-dist-electron.js  performance-mode.js  pre-pr.js  precommit.ps1  profile-electron-gpu.js  run-complete-workflow-validation.js  run-e2e-tests.js  run-electron-duration.js  run-tests.js  run-workflow-tests.js  setup-ollama.js  setup.js  startup-check.js  test-optimized-startup.js  test-performance.js  verify-setup.js
src/: repomix-output.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_naming_and_guidance.sql
src-tauri/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  responses.rs  state.rs
src-tauri/src/ai/: behavioral_learning.rs  connection.rs  embeddings.rs  folder_profiler.rs  matching_engine.rs  mod.rs  ollama.rs  ollama_manager.rs  semantic_analyzer.rs
src-tauri/src/ai/tests/: ai_service_tests.rs  fallback_tests.rs
src-tauri/src/automation/: mod.rs  orchestrator.rs
src-tauri/src/commands/: ai.rs  ai_status.rs  diagnostics.rs  duplicates.rs  files.rs  folder_guidance.rs  history.rs  mod.rs  monitoring.rs  naming.rs  notifications.rs  organization.rs  patterns.rs  protected_folders.rs  quarantine.rs  semantic.rs  settings.rs  setup.rs  stratosort.rs  system.rs
src-tauri/src/core/: document_processor.rs  duplicate_detector.rs  file_analyzer.rs  image_processor.rs  media_analyzer.rs  mod.rs  ocr_processor.rs  quarantine_manager.rs  smart_folders.rs  undo_redo.rs  undo_redo_tests.rs
src-tauri/src/services/: file_watcher.rs
src-tauri/src/storage/: database.rs  init.rs  mod.rs  vector_ext.rs  vector_ext_tests.rs
src-tauri/src/utils/: diagnostics.rs  mod.rs  retry.rs  security_tests.rs  validation.rs  validation_macros.rs
src/main/: folderScanner.js  index.js  llmService.js  ollamaStartup.js  ollamaUtils.js  repomix-output.xml  simple-main.js
src/preload/: index.js  preload.js
src/renderer/: App.js  App.jsx  index.html  index.js  polyfills.js  tailwind.css
src/shared/: EnhancedAiAnalysis.js  atomicFileOperations.js  categoryMappingService.js  config.js  constants.js  fileLogger.js  folderNameUtils.js  ipcChannels.ts  logger.js  performanceMonitor.js
test/: ENHANCED-LLM-TEST-SUMMARY.md  ENHANCED-LLM-TESTS.md  FINAL-STATUS-REPORT.md  README.md  TEST-STATUS-REPORT.md  analysis-documentExtractors.test.js  analysis-documentLlm.test.js  analysis-edge-cases.test.js  analysis-fallbackUtils.test.js  analysis-history-ipc.test.js  analysis-history-service.test.js  analysis-performance.test.js  analysis-shared-services.test.js  analysis-success.test.js  analysis-utils.test.js  atomic-file-operations.test.js  auto-organize-naming.test.js  batch-organize-ipc.test.js  chromadb-service.test.js  core-createWindow.test.js  core-customFolders.test.js  core-systemAnalytics.test.js  embedding-index-service.test.js  enhanced-document-analysis.test.js  enhanced-image-analysis.test.js  enhanced-integration-working.test.js  enhanced-integration.test.js  enhanced-llm-final-validation.test.js  enhanced-llm-functionality.test.js  enhanced-llm-integration-e2e.test.js  enhanced-llm-service.test.js  enhanced-llm-speed-optimization.test.js  enhanced-llm-validation.test.js  errors-AnalysisError.test.js  errors-ErrorHandler.test.js  file-analysis-cache.test.js  folder-name-utils.test.js  folderScanner.test.js  image-analysis-cache.test.js  integration-refactored-components.test.js  (+38 more)
test-data/: model-config.json  settings.json
test/integration/: COMPLETE-VALIDATION-README.md  README.md  service-integration.e2e.test.js  test-complete-app-lifecycle.test.js  test-complete-workflow-validation.test.js  test-drag-drop-workflow.test.js  test-end-to-end-workflow.test.js  test-enhanced-paths.js  test-enhanced-paths.test.js  test-error-recovery.test.js  test-file-move.js  test-file-move.test.js  test-file-selection-workflow.test.js  test-folder-creation.js  test-folder-creation.test.js  test-ipc-communication.test.js  test-real-app-integration.test.js  test-service-initialization.test.js  test-user-workflow.test.js
test/ipc/: file-operations.integration.test.js  filesIPC.simple.test.js  pathValidation.test.js  (+1 more)
tmpUserData/: analysis-history.json
(+202 files in other folders)
